[tool.poetry]
name = "supervisedLearning"
version = "0.1.0"
description = ""
authors = ["Frank Wan <ywan@novanthealth.org>"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
scikit-learn = "1.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
